# inp

./: CMakeLists.txt  Makefile.am  README.md  TODO.md  configure.ac  linux-headers.tar.xz  src.tar.xz
include/: App.h  Utils.h  config.h  create-package.h  install.h  return.h  utils.h
include/utils/: common.h  pair.h
src/: App.cpp  CMakeLists.txt  Utils.cpp  create-package.c  install.cpp  main.c  main.cpp  utils.cpp
src/.deps/: create-package.Po  install.Po  main.Po
src/utils/: common.c  pair.c
src/utils/.deps/: common.Po  pair.Po
